--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14810.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Az4-sg-PrW">
-    <device id="retina4_0" orientation="portrait" appearance="dark"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.15"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -60,29 +60,17 @@
                             <outlet property="delegate" destination="yak-cE-mUi" id="UP5-39-shT"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="fhU-qn-D6z"/>
+                    <navigationItem key="navigationItem" id="fhU-qn-D6z">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="yWN-oa-4Xq">
+                            <connections>
+                                <action selector="addSting" destination="yak-cE-mUi" id="mZX-G8-cwr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TjI-mr-Eu1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1147.5" y="-732.04225352112678"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="ufl-2k-ogH">
-            <objects>
-                <viewController id="ePt-9N-Acl" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="NO2-ks-68m"/>
-                        <viewControllerLayoutGuide type="bottom" id="oTe-Ju-JDP"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Mbb-B5-YT9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2h7-We-dRN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2580" y="-694"/>
         </scene>
         <!--Configuration-->
         <scene sceneID="BBH-1f-24n">
